--- a/src/New.css
+++ b/src/New.css
@@ -11,8 +11,7 @@
   background-color: rgb(49, 133, 133);
   min-width: 795px;
   border-radius: 30px;
-  /* margin-top: 30px; */
-  padding:10px 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
   font-size: 17px;
   max-width: 900px;
   height: 150px;
@@ -34,7 +33,7 @@
   padding-left: 10px;
   padding-right: 10px;
   border: none;
-  color: aliceblue
+  color: aliceblue;
 }
 
 #submit-button:hover {
